# getNumberPlate

./: .gitignore  CMakeLists.txt  Car.cpp  Main.cpp  README.md  detectVehicle.cpp  detectVehicle.h  main.cpp  player.cpp  player.h  process.cpp  process.h  readfolder.cpp  worker.cpp  worker.h
Debug/: CountingCars
