cmake_minimum_required(VERSION 3.5)
project(getNumberPlate)
set (CMAKE_PREFIX_PATH "~/openalpr/")
set(CMAKE_PREFIX_PATH "~/Qt/5.11.0/gcc_64/lib/cmake/")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
#find_package(alpr REQUIRED)
find_package(Qt5 COMPONENTS Core Gui Widgets Concurrent REQUIRED)
find_package(OpenCV)
set(CMAKE_CXX_STANDARD 11)
#add_executable(${PROJECT_NAME} readfolder.cpp)
add_executable(${PROJECT_NAME} main.cpp Car.cpp detectVehicle.cpp worker.h worker.cpp)
#add_executable(${PROJECT_NAME} r)
target_link_libraries(${PROJECT_NAME} openalpr)
target_link_libraries(${PROJECT_NAME} Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Concurrent)
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
#target_link_libraries(${PROJECT_NAME} openalpr)


